--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
  <text>
         <textPath id="text-path" href="#curve" startOffset="5">
-            I'm Kvitko Ernest, aspiring web developer
+            I love you, Sally
         </textPath>
     </text>
 </svg>
